# sfml-exploration

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/canvas/: canvas.cpp  canvas.hpp  helper.cpp
src/demo/: demo.cpp
src/demo/helper/: demo_helper.cpp  demo_helper.hpp
src/shape_demo/: demo.cpp
src/shape_demo/helper/: demo_helper.cpp  demo_helper.hpp
